--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ p.indexlink a:focus,p.indexlink a:hover,p.aboutlink a:focus,p.aboutlink a:hover 
     font-size:18px!important;
 }
 
-.guidesnav a:focus,.guidesnav a:hover {
+.guidesnav a:focus,.guidesnav a:hover,.guidesnav nav a:focus,.guidesnav nav a:hover  {
     background: #235624;
     color:#FFFFF3!important;
 }
